<resources>
    <string name="app_name">Andr</string>
    <string name="constrained_80">constrained 80%</string>
    <string name="first_name">First Name:</string>
    <string name="Email">Email:</string>
    <string name="age">Age:</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_age">Enter age</string>
    <string name="packed_chain">Packed Chain</string>
    <string name="hello_world">Hello World</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet</string>
</resources>