<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">


    <TextView
        android:id="@+id/nameHintTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/emailHintTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Email"
        android:layout_marginTop="22dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameHintTextView"
        />
    <TextView
        android:id="@+id/ageHintTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:layout_marginTop="22dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailHintTextView"
    />
    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:barrierDirection="end"
        app:constraint_referenced_ids="nameHintTextView,emailHintTextView,ageHintTextView"
        />
    <Space
        android:id="@+id/space"
        android:layout_width="20dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toEndOf="@id/barrier"
        />
    <EditText
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name"
        app:layout_constraintBaseline_toBaselineOf="@id/nameHintTextView"
        app:layout_constraintStart_toEndOf="@id/space"
        />
    <EditText
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_email"
        app:layout_constraintBaseline_toBaselineOf="@id/emailHintTextView"
        app:layout_constraintStart_toEndOf="@id/space"
        />
    <EditText
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_age"
        app:layout_constraintBaseline_toBaselineOf="@id/ageHintTextView"
        app:layout_constraintStart_toEndOf="@id/space"
        />

</androidx.constraintlayout.widget.ConstraintLayout>